--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "axios": "^0.23.0",
+    "element-ui": "^2.15.9",
+    "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
+    "vue": "^2.6.14",
+    "vue-axios": "^3.3.7",
+    "vue-router": "^3.5.2",
+    "vuejs-paginate": "^2.1.0",
+    "vuex": "^3.6.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
