--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
     "axios": "^0.23.0",
+    "core-js": "^3.8.3",
     "element-ui": "^2.15.9",
+    "express": "^4.18.1",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
+    "serve-static": "^1.15.0",
     "vue": "^2.6.14",
     "vue-axios": "^3.3.7",
     "vue-router": "^3.5.2",
