adjusted production environment variable adjusted login modal email form field

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 VUE_APP_APP_NAME="SMARTFLOW"
-VUE_APP_ENDPOINT=https://smartflow_api/api/v1/
+VUE_APP_ENDPOINT=https://smartflowapi.herokuapp.com//api/v1/
